--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>Hello, my name is man</h2>
+    <p>this is text</p>
+    <p>this is text</p>
+    <p>this is text</p>
 </body>
 </html>
