--- a/example/index.html
+++ b/example/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="libs/jquery-2.1.1.min.js"></script>
+    <!-- Strope realtime -->
     <script src="libs/strophe/strophe.js"></script>
     <script src="libs/strophe/strophe.disco.min.js?v=1"></script>
-    <script src="../../lib-jitsi-meet.min.js"></script>
-    <script src="example.js" ></script>
+    <script src="libs/lib-jitsi-meet.min.js"></script>
+    <!-- <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script> -->
+    <script src="index.js" ></script>
 </head>
 <body>
     <a href="#" onclick="unload()">Unload</a>
