--- a/example/indexx.html
+++ b/example/indexx.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="libs/jquery-2.1.1.min.js"></script>
-    <!-- Strope realtime -->
     <script src="libs/strophe/strophe.js"></script>
     <script src="libs/strophe/strophe.disco.min.js?v=1"></script>
-    <script src="libs/lib-jitsi-meet.min.js"></script>
-    <script src="test.js" ></script>
+    <script src="../../lib-jitsi-meet.min.js"></script>
+    <script src="example.js" ></script>
 </head>
 <body>
     <a href="#" onclick="unload()">Unload</a>
