--- a/hinotech/index.html
+++ b/hinotech/index.html
@@ -409,7 +409,7 @@
                   <i
                     class="cat-thumb"
                     style="
-                      background-image: url(media/category/cat_b4005c2d3f956dbc5610478b056c8e3e.html);
+                      background-image: url(https://mega.com.vn/media/category/cat_b4005c2d3f956dbc5610478b056c8e3e.jpg);
                     "
                   ></i>
                   <span>LAPTOP</span>
@@ -506,7 +506,7 @@
                   <i
                     class="cat-thumb"
                     style="
-                      background-image: url(media/category/cat_b4005c2d3f956dbc5610478b056c8e3e.html);
+                      background-image: url(https://mega.com.vn/media/category/cat_b4005c2d3f956dbc5610478b056c8e3e.jpg);
                     "
                   ></i>
                   <span>LAPTOP GAMING</span>
@@ -603,7 +603,7 @@
                   <i
                     class="cat-thumb"
                     style="
-                      background-image: url(media/category/cat_d3306ab36c10519e174cd70561740e69.jpg);
+                      background-image: url(https://mega.com.vn/media/category/cat_d3306ab36c10519e174cd70561740e69.jpg);
                     "
                   ></i>
                   <span>PC HINOTECH</span>
@@ -1744,7 +1744,7 @@
                   <i
                     class="cat-thumb"
                     style="
-                      background-image: url(media/category/cat_f6c8dd5cf8f95e19e99ef874e3edc242.jpg);
+                      background-image: url(https://mega.com.vn/media/category/cat_f6c8dd5cf8f95e19e99ef874e3edc242.jpg);
                     "
                   ></i>
                   <span>MONITOR – MÀN HÌNH MÁY TÍNH</span>
