--- a/hinotech/index.html
+++ b/hinotech/index.html
@@ -4599,7 +4599,7 @@
               </div>
             </div>
           </div>
-          <div id="nav-right" style="margin-left: 20px">
+          <!-- <div id="nav-right" style="margin-left: 20px">
             <div
               class="promotion-news"
               data-url="/ajax/get_json.php?action=article&action_type=featured&type=article&show=10"
@@ -4613,7 +4613,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </nav>
       <div class="clearfix"></div>
@@ -4715,14 +4715,6 @@
         </div>
       </div>
       <div class="container">
-        <section id="home-contact">
-          <div class="title">Liên hệ</div>
-          <div class="marquee">
-            <marquee onmouseover="stop()" onmouseout="start()">
-              Đà Nẵng
-            </marquee>
-          </div>
-        </section>
         <div id="deal-wrap" style="display: none">
           <section id="deal-home" class="bg-white">
             <div class="head">
