--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 
     const client_id = "790839183405-nvmladgval1fqno71bt9j3j4kp5t6m6f.apps.googleusercontent.com"
     function handleCredentialResponse(response) {
-      console.log("Encoded JWT ID token: " + response.credential);
+      console.log("Encoded JWT ID token: " + response);
     }
     window.onload = function () {
       google.accounts.id.initialize({
@@ -26,6 +26,19 @@
       google.accounts.id.prompt(); // also display the One Tap dialog
 
     }
+
+
+    // 2️⃣ Khi cần truy cập dữ liệu (ví dụ Google Drive)
+    function requestAccessToken() {
+        const client = google.accounts.oauth2.initTokenClient({
+          client_id: client_id,
+          scope: "https://www.googleapis.com/auth/classroom.courses.readonly",
+          callback: (response) => {
+            console.log("Access token:", response.access_token);
+          },
+        });
+        client.requestAccessToken();
+      }
   </script>
   <div id="g_id_onload"
       data-client_id="790839183405-nvmladgval1fqno71bt9j3j4kp5t6m6f.apps.googleusercontent.com"
@@ -40,5 +53,8 @@
       data-shape="rectangular"
       data-logo_alignment="left">
   </div>
+
+  <button onclick="requestAccessToken()">Request Access Token</button>
+
 </body>
 </html>
