--- a/test/index.html
+++ b/test/index.html
@@ -39,7 +39,7 @@
             console.log("Access token:", response.access_token);
           },
         });
-        client.requestAccessToken();
+        client.requestAccessToken({ prompt: "" });
       }
   </script>
   <div id="g_id_onload"
