--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
   </head>
 
   <body>
-    <script>
+    <a href="mailto:someone@example.com?subject=Hello">Send email</a>
+    <!-- <script>
         window.location.href = '/hinotech';
-    </script>
+    </script> -->
   </body>
 </html>
