--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
       CLICK HERE TO TESttttT</a
     >
 
+    <a
+      href="mailto:test@example.com?subject=Safari%20Unicode%20Limit%20Test&body=
+これはSafariのmailto制限をテストするための非常に長い本文です。%0A
+SafariではURLが約8KBを超えると動作しなくなります。Chromeは問題なく処理できます。%0A
+%0A
+以下は大量の日本語テキストと絵文字です：%0A
+%0A
+😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃😃%0A
+❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️%0A
+🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸%0A
+%0A
+ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ%0A
+いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい%0A
+うううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううううう%0A
+%0A
+このテキストは何百行も続きます。%0A
+"
+    >
+      CLICK HERE TO TEST (Unicode + Emoji)
+    </a>
+
     <!-- <script>
         window.location.href = '/hinotech';
     </script> -->
