--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         console.log("URL length:", url.length); // khoảng 3000–3500 ký tự
 
-        window.location.href = url;
+        window.open(url);
       }
     </script>
   </body>
